packaging/arch/src/Kingsmerchant-0.9.2/crates/trade-api/tests/snapshots/query_builder__detailed_query_snapshot.snap
---
source: crates/trade-api/tests/query_builder.rs
expression: req
---
{
  "query": {
    "status": {
      "option": "online"
    },
    "stats": [
      {
        "type": "and",
        "filters": [
          {
            "id": "implicit.stat_1671376347",
            "value": {
              "min": 25,
              "max": 30
            },
            "disabled": false
          }
        ]
      }
    ],
    "filters": {
      "type_filters": {
        "filters": {
          "category": {
            "option": "accessory.ring"
          },
          "rarity": {
            "option": "rare"
          }
        }
      },
      "equipment_filters": {
        "filters": {
          "ev": {
            "min": 1099
          }
        }
      },
      "trade_filters": {
        "filters": {
          "price": {
            "min": 5,
            "option": "exalted"
          }
        }
      }
    }
  },
  "sort": {
    "price": "asc"
  }
}
